--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong>
-                    <span>www.linkedin.com/in/avila-gerardo</span>
+                    <span><a href="https://www.linkedin.com/in/avila-gerardo/">www.linkedin.com/in/avila-gerardo</a></span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 209 275 1061</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Anaheim, California, USA</span>
@@ -425,7 +425,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="personalities" class="services">
+    <section id="personalities" class="personalities section-bg">
       <div class="container">
 
         <div class="section-title">
